added a pair of missing documentation comments

--- a/documentation/output/html/i2c__stm32f411_8c.html
+++ b/documentation/output/html/i2c__stm32f411_8c.html
@@ -214,7 +214,7 @@ Variables</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-<p>Maximum rise time for a fast mode pulse in ns. </p>
+<p>Maximum rise time for a fast mode pulse in ns. NULL definition in case stdlib.h isn't included already </p>
 
 </div>
 </div>
